--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <h1>Web Browsers</h1>
-    <p><b>The purpose of a web browser (Chromer, Edge, Firefox, Safari) is to read HTML documents and display them correctly.</b></p>
+    <p><b>The purpose of a web browser (<a href="https://www.google.com/chrome/?brand=BNSD&gclid=EAIaIQobChMIy8Ww7JrW8wIVVZ_VCh0FNwX0EAAYASAAEgJIq_D_BwE&gclsrc=aw.ds">Chrome</a> <a href="https://www.microsoft.com/es-es/edge">Edge</a>, <a href="https://www.mozilla.org/ca/firefox/new/">Firefox</a>, <a href="https://www.opera.com/es-419?utm_campaign=%2311%20-%20ES%20-%20Search%20-%20ES%20-%20Competition&gclid=EAIaIQobChMI8PffmJvW8wIVyvezCh0P0AWFEAAYASAAEgL2GfD_BwE">Safari</a>) is to read HTML documents and display them correctly.</b></p>
     <p><b>A browser does not display the HTML tags, but uses them to determine how to display the document:</b></p>
     <img src="./img/heading.png" alt="pagina">
     <hr>
